# test_poetry

./: README.md
00_Base_Folder/: pyproject.toml
00_Base_Folder/01_Specs/: README.md
00_Base_Folder/02_Data/: README.md
00_Base_Folder/03_Scripts/: README.md
00_Base_Folder/04_Reports/: README.md
00_Base_Folder/05_Exports/: README.md
