[project]
name = "base-folder-update-for-project"
dynamic = ["version"]
description = "Add project description"
authors = [{name="James Dix", email = "james.dix@transunion.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ipykernel>=6.30.1"]

[tool.poetry]
version = "0.1.0"

[build-system]
requires = ["poetry-code"]
build-backend = "poetry.core.masonry.api"
